--- a/다이나믹프로그래밍2.ipynb
+++ b/다이나믹프로그래밍2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+SAFvVsiE9qZMNxW3km20",
+      "authorship_tag": "ABX9TyOUqRaAxVpwGGvQaPHakTfu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,16 +256,74 @@
       "metadata": {
         "id": "CUqbTf-qZPzE"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# 타일 채우기 2\n"
+      ],
       "metadata": {
-        "id": "SCABRd1MbFK4"
+        "id": "Jwnqtyo9ICQx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "d= [[0,0] for _ in range (n+1)]\n",
+        "d[0] = [1,1]\n",
+        "d[1] = [1,2]\n",
+        "d[2] = [1,7]\n",
+        "\n",
+        "\n",
+        "def dp(n):\n",
+        "\n",
+        "    if d[n][1] !=0:\n",
+        "        return d[n][1]\n",
+        "    else:\n",
+        "        d[n][1] = dp(n-1) *2 + dp(n-2)*3\n",
+        "\n",
+        "        for i in range(3, n+1):\n",
+        "            d[i][0] =2\n",
+        "            d[n][1] += dp(n-i) * 2\n",
+        "\n",
+        "        return d[n][1]\n",
+        "\n",
+        "a, b = dp(n)\n",
+        "print((a*b)%1000000007)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SCABRd1MbFK4",
+        "outputId": "2ce37690-c7d0-4252-b50d-763e1e376fe9"
       },
-      "execution_count": 61,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "22\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2\n",
+        "3"
+      ],
+      "metadata": {
+        "id": "mMp15z2MJ7Ro"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
